<resources>
    <string name="app_name">TipCalculator-counter</string>
    <string name="text1">Enter the check Amount: $</string>
    <string name="text2">Enter the number of people \n splitting check:</string>
    <string name="text3">Calculate Tip</string>
    <string name="text4">Tip: $</string>
    <string name="text5"></string>
    <string name="button10">10%</string>
    <string name="button15">15%</string>
    <string name="button20">20%</string>
    <string name="buttonOther">Other Percent</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="otherAmount">Enter a Percentage</string>
    <string name="totalAmount">Total: $</string>
    <string name="text6"></string>
    <string name="text7"></string>
    <string name="totalPerPerson">Total Per Person: $</string>







</resources>
