<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="70dp"
        android:text="@string/text3"
        android:textSize="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="483dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/splitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="418dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="499dp"
        android:text="@string/text1" />

    <TextView
        android:id="@+id/splitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="419dp"
        android:text="@string/text2" />

    <Button
        android:id="@+id/percent10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="318dp"
        android:text="@string/button10" />

    <Button
        android:id="@+id/percent15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="319dp"
        android:text="@string/button15" />

    <Button
        android:id="@+id/percent20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="317dp"
        android:text="@string/button20" />

    <Button
        android:id="@+id/otherPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginBottom="317dp"
        android:text="@string/buttonOther" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="272dp"
        android:text="@string/reset"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="427dp" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="217dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/otherText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="297dp"
        android:text="@string/otherAmount"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="427dp" />

    <EditText
        android:id="@+id/otherInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="-23dp"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="148dp"
        android:text="@string/text4" />

    <TextView
        android:id="@+id/tipOutput"
        android:layout_width="81dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="146dp"
        android:text="@string/text5" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="109dp"
        android:text="@string/totalAmount" />

    <TextView
        android:id="@+id/totalOutput"
        android:layout_width="89dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="98dp"
        android:text="@string/text6" />

    <TextView
        android:id="@+id/perPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="49dp"
        android:text="@string/totalPerPerson" />

    <TextView
        android:id="@+id/ppOutput"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="40dp"
        android:text="@string/text7"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="681dp" />

</RelativeLayout>